# component-testbench

./: README.md
component/: Cargo.toml  README.md
component/src/: bindings.rs  lib.rs
component/wit/: world.wit
runtime/: Cargo.toml  README.md
runtime/src/: lib.rs  main.rs  router.rs  runtime.rs
wit/: world.wit
