[package]
name = "component"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen-rt = { version = "0.41.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "rama:component"

[package.metadata.component.target]
path = "../wit/world.wit"

[package.metadata.component.dependencies]
