[package]
name = "component"
version = "0.1.0"
edition = "2024"

[dependencies]
url = "2.5.4"
uuid = { version = "1.18.0", features = ["v4"] }
wit-bindgen-rt = { version = "0.41.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "rama:component"

[package.metadata.component.target]
path = "../wit"

[package.metadata.component.dependencies]
